--- a/templates/pandoc-syllabus-template.html
+++ b/templates/pandoc-syllabus-template.html
@@ -18,9 +18,9 @@
                 <h1>$title$</h1>
                 $endif$ $if(subtitle)$
                 <div class="subtitle">$subtitle$</div>
-                $endif$ $if(date)$
-                <div class="subtitle">$date$</div>
                 $endif$
+                <!-- Last updated date in small italics -->
+                <div class="last-updated">Last updated on $date$</div>
             </header>
 
             <div class="content">
