updated syllabus formatting

--- a/templates/pandoc-dh-template.html
+++ b/templates/pandoc-dh-template.html
@@ -12,7 +12,9 @@
             $if(title)$Syllabus - $title$$else$Syllabus - Digital
             Humanities$endif$
         </title>
+        <!-- Link to main site style first for base styling -->
         <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <!-- Then the syllabus-specific styles for collapsible functionality -->
         <link rel="stylesheet" type="text/css" href="css/syllabus-styles.css" />
         <link
             href="https://fonts.googleapis.com/css?family=Assistant"
